added step level env variable

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,12 @@ jobs:
         run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
+        env:
+          surprise: I_ran_in_the_Run_tests_step
       - name: Output information
         run: |
           echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
+          echo "SURPRISE: env.surprise"
   deploy:
     needs: test
     runs-on: ubuntu-latest
